<resources>
    <string name="app_name">Bike Computer</string>
    <string name="start_scan">Start Scan</string>
    <string name="start_track">Start Tracking</string>
    <string name="connection_state">Disconnected</string>
    <string name="connection_indicator">connection indicator</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="specs_header">Bike specifications</string>

    <!-- Bike specs -->
    <string name="diameter_value">Diameter of your wheel (mm)</string>
    <string name="placeholder_time">22:45</string>
    <string name="placeholder_date">24/12/1999</string>
    <string name="placeholder_distance">999.00 km</string>
    <string name="deleteBtnDesc">remove trip</string>
    <string name="placeholder_average_speed">15.42 km/h</string>
    <string name="average_speed_label">Average speed:</string>
    <string name="distance_label">Distance:</string>
</resources>