<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/start_ride_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_track"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.534" />

    <LinearLayout
        android:id="@+id/connection_state_view"
        android:layout_width="177dp"
        android:layout_height="21dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/start_ride_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13999999"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/connection_state_img"
            android:layout_width="33dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/connection_indicator"
            app:srcCompat="@android:drawable/presence_invisible" />

        <TextView
            android:id="@+id/connection_state_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/connection_state"
            android:textAlignment="center" />
    </LinearLayout>

    <com.github.anastr.speedviewlib.TubeSpeedometer
        android:id="@+id/speedometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/start_ride_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:sv_maxSpeed="40"
        app:sv_speedTextColor="@color/design_default_color_primary"
        app:sv_speedTextPosition="CENTER"
        app:sv_speedTextSize="30dp"
        app:sv_tickNumber="11"
        app:sv_unitTextColor="@color/design_default_color_primary"
        app:sv_unitUnderSpeedText="true"
        app:sv_withTremble="false" />

    <Chronometer
        android:id="@+id/cmTimer"
        android:layout_width="282dp"
        android:layout_height="86dp"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/start_ride_btn"
        app:layout_constraintVertical_bias="0.232" />

    <TextView
        android:id="@+id/average_speed_view"
        android:layout_width="195dp"
        android:layout_height="45dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="112dp"
        android:text="@string/placeholder_average_speed"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/avgSpdLabel"
        android:layout_width="165dp"
        android:layout_height="33dp"
        android:layout_marginTop="24dp"
        android:text="@string/average_speed_label"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/average_speed_view"
        app:layout_constraintEnd_toStartOf="@+id/distanceLabel"
        app:layout_constraintHorizontal_bias="0.224"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cmTimer"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/distanceLabel"
        android:layout_width="101dp"
        android:layout_height="33dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="56dp"
        android:text="@string/distance_label"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/distance_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cmTimer"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/distance_view"
        android:layout_width="167dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="116dp"
        android:text="13.45 km"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>