<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/upperLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/lowerLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/calendar_image"
            android:layout_width="15dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_menu_month" />

        <TextView
            android:id="@+id/trip_date_text"
            android:layout_width="83dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/placeholder_date"
            android:textAlignment="center"
            android:textSize="30sp"
            android:typeface="normal" />

        <ImageView
            android:id="@+id/clock_image"
            android:layout_width="9dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_menu_recent_history" />

        <TextView
            android:id="@+id/trip_time_view"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/placeholder_time"
            android:textAlignment="center"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lowerLayout"
        android:layout_width="408dp"
        android:layout_height="61dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="0"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upperLayout">

        <ImageView
            android:id="@+id/bike_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/trip_distance_text"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/placeholder_distance"
            android:textAlignment="center"
            android:textSize="55sp" />

        <ImageButton
            android:id="@+id/delete_trip_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/deleteBtnDesc"
            app:srcCompat="@android:drawable/ic_menu_delete" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>